Ansible/heat_template.yaml
# Juno Release
heat_template_version: 2014-10-16


description: 'Install Apache on a single Ubuntu instance using the  OS::Nova::Server resource type. '


parameters:

  key_name:
    type: string
    label: Key Name
    description: Name of an existing KeyPair to enable SSH access to the instances. 
    
  image_id:
    type: string
    label: Image ID
    description: Image to be used for compute instance
    default: Ubuntu 16.04
    constraints:
      - allowed_values: [ Ubuntu 15.04, Ubuntu 16.04 ]
        description: Value must be one of Ubuntu 15.04, Ubuntu 16.04
    
  instance_type:
    type: string
    label: Instance Type
    description: Type of instance (flavor) to be used. 
    default: m1.small
    constraints:
      - allowed_values: [ m1.small, m1.medium, m1.large, m1.xlarge ]
        description: Value must be one of m1.small, m1.medium, m1.large or m1.xlarge.
    
  availability_zone:
    type: string
    label: Availability Zone
    description: Physical location of the server. 
    default: melbourne-qh2
    constraints:
      - allowed_values: [ monash, melbourne-qh2, QRIScloud, NCI, intersect, pawsey, sa, tasmania ]
        description: Value must be one of monash, melbourne-qh2, QRIScloud, NCI, intersect, pawsey, sa, tasmania.

  private_network:
    type: string
    label: Private network name or ID
    description: Network to attach instance to.
    default: Classic Provider

    
  

resources:
    
    # Use this when we do not have Neutron networking.
    # http://docs.openstack.org/developer/heat/template_guide/cfn.html#AWS::EC2::SecurityGroup
    

    web_security_group:
        type: AWS::EC2::SecurityGroup
        properties:
            GroupDescription: Web server access rules.
            SecurityGroupIngress:
                - {IpProtocol: icmp, FromPort: '-1', ToPort: '-1', CidrIp : 0.0.0.0/0}
                - {IpProtocol: tcp, FromPort: '22', ToPort: '22', CidrIp: 0.0.0.0/0}
                - {IpProtocol: tcp, FromPort: '80', ToPort: '80', CidrIp: 0.0.0.0/0}
                - {IpProtocol: tcp, FromPort: '2377', ToPort: '2377', CidrIp: 0.0.0.0/0}
         

    basic_server:
        type: OS::Nova::Server
        properties:
            key_name: { get_param: key_name }
            image: 
              Fn::Select:
                - { get_param: image_id }
                -
                  'Ubuntu 16.04': 0a2bac09-8beb-464a-9cbc-6adf4dfcd5e5
                  'Ubuntu 15.04': fc48b5bb-e67d-4e39-b9ba-b6725c8b0c88
            flavor: { get_param: instance_type }
            availability_zone: {get_param: availability_zone}
            security_groups:
                - { get_resource: web_security_group }
            networks:
              - network: { get_param: private_network }

            
       
             
outputs:
    instance_ip:
        description: The IP address of the deployed instance.
        value: { get_attr: [basic_server, first_address] }
